--- a/SDStudentPortal/SDStudentPortal/Views/Home/Index.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Home/Index.cshtml
@@ -3,18 +3,9 @@
 }
 
 <div class="jumbotron">
-
+    Welcome to the Robertson College Software Developers Student Portal!
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        @Html.Partial("_IndexPartialPublic")
-    </div>
-
-    <div class="col-md-8">
-        @if (Request.IsAuthenticated)
-        {
-            @Html.Partial("_IndexPartialPrivate")
-        }
-    </div>
+<div>
+    The information on this page will change shortly based on specifications from Employment Services. Stay tuned!
 </div>
