--- a/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                     </div>
                     <ul class="dropdown-menu" role="menu">
                         <li>@Html.ActionLink("Blogs", "Index", "Blog")</li>
-                        <li>@Html.ActionLink("Search Blogs", "BlogSearchResult", "Blog")</li>
+                        <li>@Html.ActionLink("Admin Options", "AdminIndex", "Blog")</li>
                     </ul>
                 </div>
                 <ul class="nav navbar-nav">
