file link working

--- a/SDStudentPortal/SDStudentPortal/Views/Projects/Details.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Projects/Details.cshtml
@@ -41,6 +41,10 @@
                      grid.Column("File#", format: item => item.WebGrid.Rows.IndexOf(item) + 1 + Math.Round(Convert.ToDouble(grid.TotalRowCount / grid.PageCount) / grid.RowsPerPage) * grid.RowsPerPage * grid.PageIndex),
                      grid.Column("Title", "Title"),
                      grid.Column("Description", "Description"),
+                     grid.Column("","",format: @<text>
+                    
+            <a href='~/@item.UploadFileUrl' target="_blank"> @item.UploadFileUrl </a>
+                                                </text>),                     
                      grid.Column("UploadFileUrl", "File", format: @<text><img src="@item.UploadFileUrl" /></text>)
             ))
         </dd>
