--- a/SDStudentPortal/SDStudentPortal/Views/Uploads/Index.cshtml
+++ b/SDStudentPortal/SDStudentPortal/Views/Uploads/Index.cshtml
@@ -58,7 +58,7 @@
         </td>
         <td>
             @*@Html.DisplayFor(modelItem => item.UploadFileUrl)*@
-            <a href="@Html.DisplayFor(modelItem => item.UploadFileUrl)" target="_blank">@Html.DisplayFor(modelItem => item.UploadFileUrl)</a>
+            <a href="~/@Html.DisplayFor(modelItem => item.UploadFileUrl)" target="_blank">@Html.DisplayFor(modelItem => item.UploadFileUrl)</a>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UploadFileUrlPrivacySetting)
